kubernetes/ingress/backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
spec:
  rules:
    - host: ecsb.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webapp
                port:
                  number: 5173
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: game-init
                port:
                  number: 2136
          - path: /moving
            pathType: Prefix
            backend:
              service:
                name: moving
                port:
                  number: 8085
          - path: /chat
            pathType: Prefix
            backend:
              service:
                name: chat
                port:
                  number: 2138
